--- a/_site.yml
+++ b/_site.yml
@@ -5,7 +5,7 @@ navbar:
   left:
     - text: "Data & Scripts"
       href: software.html
-    - text: "Blog"
+    - text: "Projects"
       href: blogPerso.html
     - text: "Keywords"
       href: blog.html      
